add store booking endpoint
